--- a/sass/navigation/_nav-desktop.scss
+++ b/sass/navigation/_nav-desktop.scss
@@ -7,7 +7,7 @@
 
   // Affecting to both main and sub-levels
   --color-dropdown-toggle: var(--color-white);
-  --color-current: var(--color-link-text);
+  --color-current: var(--cinza-clarinho);
   --dropdown-toggle-size: 0.75rem;
 
   // Main level items on desktop
