--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -21,6 +21,7 @@
   --cinza-clarinho: #F2F2F2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
+  --cinza-medio-900: #00000066;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
 
