--- a/sass/helpers/index.scss
+++ b/sass/helpers/index.scss
@@ -5,5 +5,6 @@
 @forward 'helpers/images';
 @forward 'helpers/font';
 @forward 'helpers/variablefont';
+@forward 'helpers/sanitize';
 
 /* helpers/_index.scss */
