--- a/sass/layout/_site-footer.scss
+++ b/sass/layout/_site-footer.scss
@@ -7,57 +7,128 @@
 // and start over.
 .site-footer {
   // Making sure the footer background is white, even on WordPress.org
-  background-color: var(--color-white);
+  background-color: var(--cinza-clarinho);
   clear: both;
   color: var(--color-paragraph);
   overflow: hidden;
   padding: 3.75rem 1.25rem;
-  text-align: center;
-
-  .wordpress-logo {
-    display: block;
-    margin-bottom: 1.25rem;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  span {
-    display: block;
-    text-align: center;
-  }
-
-  svg {
-    margin-right: 0.3125rem;
-    position: relative;
-  }
-
-  .powered-by-wordpress {
-    display: inline-block;
-    font-weight: var(--typography-weight-semibold);
-    margin-bottom: 0.625rem;
-    text-align: center;
-  }
-
-  .github-link {
-    margin-left: 0.5rem;
-    margin-top: 4px;
-    overflow: hidden;
-    padding-bottom: 4px;
-    position: relative;
-  }
-
-  .theme-info {
-    align-items: center;
-    color: var(--color-paragraph);
+  display: flex;
+  justify-content: center;
+  .footer-container{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    line-height: 1.5;
-    margin: 0 auto;
-    text-align: center;
+    gap: 200px;
+    justify-content: space-between;
+    align-items: center;
+    width: 1400px;
+    .footer-site-branding {
+      background-color: #333;
+      width: 245.714px;
+      height: 40px;
+      text-align: center;
+      // Remover esse codigo assim que funcionar a cor da imagem
+      .footer-logo {
+        border-radius: 10px;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+      }
+    }
+    
 
-    i {
-      margin: 0 0.3125rem;
+
+    .main-area{
+      display: flex;
+      flex: 1;
+      max-width: 84.1rem;
+      align-items: flex-start;
+      justify-content: space-between;
+      .footer-column{
+        display: flex;
+        flex-direction: column;
+        gap: 84px;
+        h2{
+          color: var(--color-science-blue);
+          font-family: 'Faktum', sans-serif;
+          font-size: 20px;
+          font-weight: 500;
+          line-height: 28.89px;
+          letter-spacing: -0.6px;
+          margin: 0;
+        }
+        
+        .footer-menu {
+          display: flex;
+          flex-direction: column;
+          list-style: none;
+          padding: 0;
+          margin: 0;
+          gap: 16px;
+        
+          li {
+            display: inline-block;
+        
+            a {
+              color: var(--cinza-medio-900);
+              font-family: "Faktum", sans-serif;
+              font-size: 20px;
+              font-weight: 400;
+              letter-spacing: -0.6px;
+              text-decoration: none;
+              transition: color 0.3s ease-in-out;
+
+              margin: 0;
+              padding: 0;
+
+              &:hover {
+                color: red;
+              }
+              .external-link-icon, .is-external-link{
+                display: none;
+              }
+            }
+          }
+        }
+
+        .footer-contact{
+          display: flex;
+          flex-direction: column;
+          gap: 89px;
+          margin: 0;
+          .phone-email{
+            display: flex;
+            flex-direction: column;
+            gap: 23px;
+            margin: 0;
+            p{
+              color: var(--PRETO-40, rgba(0, 0, 0, 0.40));
+              font-family: "Faktum", sans-serif;
+              font-size: 20px;
+              font-weight: 500;
+              letter-spacing: -0.6px;
+              margin: 0;
+            }
+          }
+          .redes-sociais{
+            display: flex;
+            gap: 16px;
+            margin: 0 auto;
+            padding: 0;
+            li{
+              list-style-type: none;
+              cursor: pointer;
+              a{
+                list-style-type: none;
+                .external-link-icon{
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
+
+  // @media (min-width: breakpoints.$width-max-mobile) {
+  //   min-height: calc(100vh - 100px);
+  // }
+
 }
