Ajustado o Footer responsivo

--- a/css/dev/global.css
+++ b/css/dev/global.css
@@ -1373,14 +1373,9 @@ p:last-child {
   width: 1400px;
 }
 .site-footer .footer-container .footer-site-branding {
-  background-color: #333;
   width: 245.714px;
   height: 40px;
   text-align: center;
-}
-.site-footer .footer-container .footer-site-branding .footer-logo {
-  border-radius: 10px;
-  box-shadow: 2px 2px 10px #0000004d;
 }
 .site-footer .footer-container .main-area {
   display: flex;
@@ -1394,7 +1389,12 @@ p:last-child {
   flex-direction: column;
   gap: 84px;
 }
-.site-footer .footer-container .main-area .footer-column h2 {
+.site-footer .footer-container .main-area .footer-column .title {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.site-footer .footer-container .main-area .footer-column .title h2 {
   color: var(--color-science-blue);
   font-family: "Faktum", sans-serif;
   font-size: 20px;
@@ -1466,6 +1466,62 @@ p:last-child {
 }
 .site-footer .footer-container .main-area .footer-column .footer-contact .redes-sociais li a .external-link-icon {
   display: none;
+}
+@media (max-width: 640px) {
+  .site-footer .footer-container {
+    display: flex;
+    flex-direction: column;
+    gap: 61px;
+  }
+  .site-footer .footer-container .main-area {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+  .site-footer .footer-container .main-area .footer-column {
+    display: flex;
+    flex-direction: column;
+    gap: 30px !important;
+  }
+  .site-footer .footer-container .main-area .footer-column .title h2 {
+    color: var(--PRETO-80, #000c);
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: -0.54px;
+  }
+  .site-footer .footer-container .main-area .footer-column .footer-menu, .site-footer .footer-container .main-area .footer-column .phone-email {
+    display: none; /* Oculta os menus no mobile */
+  }
+  .site-footer .footer-container .main-area .footer-column .footer-menu li a, .site-footer .footer-container .main-area .footer-column .phone-email li a {
+    color: var(--PRETO-40, #0006);
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: -0.48px;
+  }
+  .site-footer .footer-container .main-area .footer-column .footer-menu.active, .site-footer .footer-container .main-area .footer-column .phone-email.active {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding-top: 10px;
+  }
+  .site-footer .footer-container .main-area .footer-column .footer-contact {
+    gap: 70px;
+  }
+  .site-footer .footer-container .main-area .footer-column .footer-contact .phone-email {
+    gap: 19px;
+  }
+  .site-footer .footer-container .main-area .footer-column .footer-contact .phone-email p {
+    color: var(--PRETO-40, #0006);
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: -0.48px;
+  }
+  .site-footer .footer-container .main-area .footer-column .arrow-icon {
+    transition: transform 0.3s ease;
+  }
+  .site-footer .footer-container .main-area .footer-column .rotated {
+    transform: rotate(90deg);
+  }
 }
 
 
