--- a/sass/layout/_site-footer.scss
+++ b/sass/layout/_site-footer.scss
@@ -21,19 +21,10 @@
     align-items: center;
     width: 1400px;
     .footer-site-branding {
-      background-color: #333;
       width: 245.714px;
       height: 40px;
       text-align: center;
-      // Remover esse codigo assim que funcionar a cor da imagem
-      .footer-logo {
-        border-radius: 10px;
-        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-      }
     }
-    
-
-
     .main-area{
       display: flex;
       flex: 1;
@@ -44,16 +35,21 @@
         display: flex;
         flex-direction: column;
         gap: 84px;
-        h2{
-          color: var(--color-science-blue);
-          font-family: 'Faktum', sans-serif;
-          font-size: 20px;
-          font-weight: 500;
-          line-height: 28.89px;
-          letter-spacing: -0.6px;
-          margin: 0;
+        .title{
+          display: flex;
+          align-items: center;
+          gap: 12px;
+          h2{
+            color: var(--color-science-blue);
+            font-family: 'Faktum', sans-serif;
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 28.89px;
+            letter-spacing: -0.6px;
+            margin: 0;
+          }
         }
-        
+
         .footer-menu {
           display: flex;
           flex-direction: column;
@@ -61,10 +57,8 @@
           padding: 0;
           margin: 0;
           gap: 16px;
-        
           li {
             display: inline-block;
-        
             a {
               color: var(--cinza-medio-900);
               font-family: "Faktum", sans-serif;
@@ -73,10 +67,8 @@
               letter-spacing: -0.6px;
               text-decoration: none;
               transition: color 0.3s ease-in-out;
-
               margin: 0;
               padding: 0;
-
               &:hover {
                 color: red;
               }
@@ -127,8 +119,71 @@
     }
   }
 
-  // @media (min-width: breakpoints.$width-max-mobile) {
-  //   min-height: calc(100vh - 100px);
-  // }
+  // min-width: breakpoints.$width-max-mobile
 
+  @media (max-width: 640px) {
+    .footer-container{
+      display: flex;
+      flex-direction: column;
+      gap: 61px;
+      .main-area{
+        display: flex;
+        flex-direction: column;
+        gap: 40px ;
+        .footer-column{
+          display: flex;
+          flex-direction: column;
+          gap: 30px !important;
+          .title{
+            h2{
+              color: var(--PRETO-80, rgba(0, 0, 0, 0.80));
+              font-size: 18px;
+              font-weight: 500;
+              letter-spacing: -0.54px;
+            }
+          }
+          
+          .footer-menu, .phone-email {
+            display: none; /* Oculta os menus no mobile */
+            li{
+              a{
+                color: var(--PRETO-40, rgba(0, 0, 0, 0.40));
+                font-size: 16px;
+                font-weight: 400;
+                letter-spacing: -0.48px;
+              }
+            }
+          }
+          .footer-menu.active, .phone-email.active  {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+            padding-top: 10px;
+          }
+          .footer-contact{
+            gap: 70px;
+            .phone-email{
+              gap: 19px;
+              p{
+                color: var(--PRETO-40, rgba(0, 0, 0, 0.40));
+                font-size: 16px;
+                font-weight: 400;
+                letter-spacing: -0.48px;
+              }
+            }
+          }
+
+          .arrow-icon {
+            transition: transform 0.3s ease;
+          }
+        
+          .rotated {
+            transform: rotate(90deg);
+          }
+        }
+      }
+    }
+  }
+  
 }
+
